docs/tests/parser/declarations/invalid/VarDeclMissingName.b
fn void test() {
    let int = 5;
}
